# local-whisper

./: .gitignore  CLAUDE.md  LICENSE  Package.resolved  Package.swift  README.md  appcast.xml  benchmark_models.swift  download_model.sh
.build/: build.db  plugin-tools.yaml  workspace-state.json
.build/arm64-apple-macosx/debug/: description.json  plugin-tools-description.json
.github/workflows/: ci.yml  release.yml
LocalWhisper/App/: AppDelegate.swift  AppState.swift  LocalWhisperApp.swift
LocalWhisper/Coordinators/: TranscriptionCoordinator.swift
LocalWhisper/Resources/: AppIcon.icns
LocalWhisper/Services/: AudioCaptureService.swift  AudioMuteService.swift  HotkeyManager.swift  PermissionsService.swift  TextInjectionService.swift  TranscriptionService.swift  UpdaterService.swift
LocalWhisper/UI/: MenuBarView.swift  SettingsView.swift
LocalWispr/App/: AppDelegate.swift  AppState.swift  LocalWisprApp.swift
LocalWispr/Coordinators/: TranscriptionCoordinator.swift
LocalWispr/Models/: AudioData.swift  TranscriptionState.swift
LocalWispr/Resources/: AppIcon.icns  Info.plist
LocalWispr/Services/: HotkeyManager.swift  TextInjectionService.swift  TranscriptionService.swift
LocalWispr/UI/: MenuBarView.swift  SettingsView.swift
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
docs/: architecture.md  ci-cd-setup.md  models.md
scripts/: detect_key.swift  download_model.sh  generate-appcast.sh  release.sh  test_whisperkit.swift
(+1926 files in other folders)
